--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -523,6 +523,33 @@ section.feature_area.inner_page {
     direction: rtl;
 }
 
+/*********** event & magazine **************/
+.block_item_event {
+    direction: rtl;
+    text-align: right;
+}
+.date_event {
+    border-right: 1px solid #ddd;
+    border-left: 0;
+}
+.desc_main_event{
+    text-align: right;
+}
+.desc_main_event ul{
+    list-style-type: disc;
+    padding: 0 20px 20px 0;
+}
+.book-item {
+    direction: rtl;
+    text-align: right;
+}
+.bk-img {
+    float: right;
+    padding-left: 30px;
+    padding-right: 0;
+}
+/*********** end event & magazine **************/
+
 @media screen and (max-width:1024px) {
 
     .list_about li {
