--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1078,7 +1078,7 @@
     .choose_content h3 {
         font-size: 18px;
     }
-    
+
     /* =========== Start Home Six Css ========= */
 
     .advisar-header-area.style_sixs {
@@ -1122,7 +1122,7 @@
     .case-study-single-box.style_three .case-study-content {
         padding: 30px 50px 10px;
     }
- 
+
 
     /* ======== Breadcumb Area ========= */
 
@@ -2871,7 +2871,7 @@
     .single-team_item.style_four .team_thumb img {
         width: 100%;
     }
-    
+
     .single-team_item.style_four {
         border-radius: 200px 200px 0 0;
     }
@@ -3070,7 +3070,7 @@
     }
     section.contact_area.inner_section {
         padding: 90px 0 100px;
-    } 
+    }
     .contact_main_info {
         margin-bottom: 30px;
     }
@@ -3144,9 +3144,9 @@
     }
     .hero_content h1 span{
         overflow: hidden;
-        width: 52%;
+        width: 61%;
         display: block;
-        margin: auto;
+        margin: 20px auto 0 auto;
     }
     .hero_content p {
         width: 100%;
@@ -3310,6 +3310,7 @@
     .section_title.text-center {
         margin-bottom: 15px;
         width: 100% !important;
+        margin-top: 20px;
     }
 
     .service_single_item.style_two:hover .service_btn a {
@@ -3436,7 +3437,7 @@ section.case-study-area {
     }
     .mc4wp-form-fields input[type="email"] {
         width: 100%;
-        margin: 20px 0 10px 0;
+
     }
     /* ==== Footer Area ==== */
     .footer_area {
@@ -3505,7 +3506,7 @@ section.case-study-area {
         padding: 105px 0 80px;
     }
     .proconsul_btn.right_btn {
-        margin-top: 20px;
+        margin: 0 0 30px 0;
         height: auto;
         text-align: center;
     }
@@ -3610,7 +3611,7 @@ section.case-study-area {
     }
     .call-do-action-info {
         display: flex;
-        margin: 0 0 0 0 !important;
+        margin: 0 0 30px 0 !important;
         padding: 0 !important;
     }
     .call-do-social_icon {
@@ -3677,7 +3678,7 @@ section.case-study-area {
         margin-left: 0;
     }
     .about_play.style_three {
-        right: 0 !important;
+
     }
     .about_shape.style_five {
         right: 3%;
@@ -3764,7 +3765,7 @@ section.case-study-area {
     }
     .testi_shape_four {
         top: 12%;
-        right: 24%;       
+        right: 24%;
     }
     .testimonial_area.style_three .section_title p {
         width: 98%;
@@ -4146,6 +4147,7 @@ section.case-study-area {
     }
     .team_thumb img {
         width: 100%;
+        min-height: 100%;
     }
     .recent-post-text a {
         font-size: 14px;
@@ -4342,6 +4344,103 @@ section.case-study-area {
 
 /*xl device min width*/
 @media screen and (max-width:1024px) {
+
+    .order--oneEvent{
+        order: -1;
+    }
+
+    .date_event{
+        border: 0;
+        font-size: 14px;
+        text-align: left;
+        position: absolute;
+        background: #fff;
+        height: 33px;
+        margin: 10px 0 0 15px;
+        padding: 5px 15px;
+        border-radius: 25px;
+    }
+    .date_event i {
+        display: inline;
+        margin: 0 5px 0 0;
+        font-size: 14px;
+    }
+    .date_event b {
+        display: inline;
+        font-size: 14px;
+        margin: 0 0 0 0;
+    }
+    .desc_event p {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+    }
+
+    .about_thumb {
+        width: 100%;
+    }
+
+    .order_one_serv{
+        order: 1;
+    }
+    .img_sidebar_sector {
+        margin: 0 0 0 0;
+    }
+    .content-article img{
+        width: 100% !important;
+        height: auto !important;
+    }
+
+    .order_phone{
+        order: 1;
+    }
+
+
+    .footer_area .col-auto{
+        width: 100% !important;
+    }
+
+    .service_single_item.style_two .service_content h3 {
+        height: 40px;
+    }
+
+    .list_about li {
+        position: relative;
+        text-align: left;
+        padding: 0 0 0 30px;
+    }
+    .list_about li i {
+        color: green;
+        position: absolute;
+        left: 5px;
+        padding: 5px 0 0 0;
+    }
+    .notfound-404{
+        padding: 150px 0 50px 0;
+    }
+    .notfound-404 h1{
+        font-size: 32px;
+    }
+
+
+    .single-team_item {
+        margin-top: 15px;
+        margin-bottom: 0;
+    }
+    .img_sector img {
+        min-height: 100%;
+    }
+    .icon_img_sector img {
+        width: 60%;
+    }
+
+    .footer-widget-content.style_two .footer-widget-title h4 {
+        margin-bottom: 15px;
+    }
+    .hero_content h1 {
+        width: 100%;
+    }
     .counter_upper .section_title h2{
         padding: 0 20px;
     }
@@ -4371,9 +4470,9 @@ section.case-study-area {
     }
     .desc-sector {
         height: auto;
-        padding: 50px 20px 0 20px;
-        text-align: center;
-        margin:0 0 30px 0;
+        padding: 50px 20px 0 20px !important;
+        text-align: center !important;
+        margin: 0 0 30px 0;
     }
     .desc-sector h2{
         font-size: 21px;
@@ -4384,7 +4483,9 @@ section.case-study-area {
 
     .icon_img_sector{
         top: -50px;
-        left: 38%;
+        left: 0 !important;
+        right: 0 !important;
+        margin: auto;
     }
 
     .order-mob-1{
@@ -4443,22 +4544,24 @@ section.case-study-area {
     }
     .order-mob{
         order: 1;
+        width: 100% !important;
     }
     .content-article{
-        padding: 0 15px;
+
     }
     .img-block-view {
         position: relative;
         height: auto;
-        width: 85%;
+        width: 100%;
         top: 0;
         left: 0;
         right: 0;
         margin: auto;
+        display: none;
     }
     .proconsul_btn.right_btn a{
         padding: 10px 25px;
-        width: 85%;
+        width: 100%;
         margin: 15px 0 0 0;
     }
     .text-style-mob{
@@ -4483,7 +4586,8 @@ section.case-study-area {
         display: none;
     }
     .img_main_searvice{
-        height: auto;
+        height: 200px;
+        border-radius: 10px;
     }
 
     .content_service_one h2{
@@ -4499,7 +4603,7 @@ section.case-study-area {
         padding: 0 !important;
     }
     .section_title {
-        padding: 5px 0 15px 0;
+        padding: 15px 0 25px 0;
         text-align: center;
     }
     .img_section_four {
