--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3717,7 +3717,7 @@ section.hero_area {
     line-height: 70px;
     position: relative;
     color: #fff;
-    
+
 }
 
 .hero_content p {
@@ -8121,4 +8121,337 @@ button.close-search i {
 .languages_-thumb img {
     width: 100%;
     margin: 0;
+}
+
+
+.content_coce{
+    text-align: center;
+}
+
+.btn_coce{
+
+}
+.btn_coce button{
+    display: block;
+    margin: 15px auto;
+    border-radius: 25px;
+    border: 0;
+    padding: 10px 30px;
+}
+.btn_coce button.yesThanx{
+    background-color: #faab43;
+    color:#fff;
+}
+.btn_coce button.noThanx{
+    background: transparent;
+    font-weight: bold;
+    color: #faab43;
+}
+
+.box_coc_footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90%;
+    width: 100%;
+}
+
+
+/******************* event & magazine *********************/
+.block_item_event{
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+.block_item_event:hover{
+    box-shadow: 0 0 30px #ddd;
+}
+.date_event{
+    display: block;
+    height: 100%;
+    text-align: center;
+    font-size: 22px;
+    padding: 30px 0;
+    color: #000;
+    border-left: 1px solid #ddd;
+}
+.date_event b{
+    display: block;
+    width: 100%;
+    clear: both;
+    font-size: 60px;
+    margin: 30px 0 30px 0;
+}
+.date_event i{
+    display: block;
+    margin: 0 0 20px 0;
+    font-size: 36px;
+    color: #faab43;
+}
+.slider_event{}
+.slider_event .carousel-item{
+    height: 250px;
+    overflow: hidden;
+    border-radius: 15px;
+}
+.desc_event{}
+.desc_event h3 a{
+    margin: 20px 0 20px 0;
+    font-weight: bold;
+    display: block;
+}
+.desc_event p{}
+
+.sidebar_box_event{
+    border: 1px dashed rgb(0 0 0 / 18%);
+    padding: 10px 25px 30px 25px;
+    border-radius: 15px;
+}
+
+.header-button-whats .btn_whatsapp{
+    background: green;
+}
+
+.img_main_event{
+    overflow: hidden;
+    border-radius: 15px;
+}
+.img_main_event img{
+    width: 100%;
+}
+
+.desc_main_event h3{
+    margin: 25px 0 15px 0;
+}
+.desc_main_event ul{
+    list-style-type: disc;
+    padding: 0 0 20px 20px;
+}
+.desc_main_event ul li{
+    list-style-type: disc;
+    color: #000;
+}
+
+
+
+
+
+/*
+ *  book List
+*/
+.toolbar {
+    margin-bottom: 30px;
+    border-bottom: 1px solid #d2d6d5;
+}
+.toolbar select {
+    margin-bottom: 7px;
+    color: #313131;
+    font-size: 14px;
+    border: none;
+    background-color: transparent;
+}
+.toolbar .filter-options {
+    line-height: 40px;
+}
+.toolbar a.filter-item {
+    margin-right: 16px;
+    padding-bottom: 18px;
+    font-size: 14px;
+    color: #313131;
+    border-bottom: 0px solid transparent;
+    transition: all 250ms ease-out;
+}
+.toolbar a.filter-item:last-child {
+    margin-right: 0;
+}
+.toolbar a.filter-item.active {
+    padding-bottom: 15px;
+    color: #219e9a;
+    font-weight: bold;
+    border-bottom: 3px solid #219e9a;
+}
+
+#grid {
+    margin-bottom: 60px;
+}
+
+.book-item {
+    margin: 15px 0;
+    padding: 15px;
+    list-style-type: none;
+}
+.book-item:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 15px;
+    width: calc(100% - 105px);
+    height: 100%;
+    border-radius: 3px;
+    box-shadow: 0 0 0 0 transparent;
+    background-color: rgba(255, 255, 255, 0);
+    z-index: -1;
+    transition: all 250ms ease-out;
+}
+
+.book-item:hover .item-img img {
+    box-shadow: 0px 0px 10px 0px rgba(49, 49, 49, 0.25);
+}
+.book-item:hover a.button {
+    background-color: #219e9a;
+}
+.book-item:hover .bk-bookdefault {
+    transform: rotate3d(0, 1, 0, 25deg);
+}
+.book-item:hover .bk-back {
+    opacity: 1;
+}
+.book-item .item-img {
+    display: inline-block;
+    float: left;
+    padding-right: 30px;
+}
+.book-item .item-img img {
+    box-shadow: 0 0 0 0 transparent;
+    transition: all 250ms ease-out;
+}
+.book-item .item-details {
+    padding-right: 30px;
+}
+.book-item h3 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.book-item p:not(.author) {
+    display: block;
+    display: -webkit-box;
+    height: 45px;
+    font-size: 15px;
+    line-height: 1.4;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/*
+ *  Book Rotate
+*/
+.bk-img {
+    position: relative;
+    display: inline-block;
+    float: left;
+    padding-right: 30px;
+    list-style: none;
+    /* Individual style & artwork */
+}
+.bk-img .bk-wrapper {
+    position: relative;
+    width: 150px;
+    height: 215px;
+    float: left;
+    z-index: 1;
+    perspective: 1400px;
+}
+.bk-img .bk-wrapper:last-child {
+    margin-right: 0;
+}
+.bk-img .bk-book {
+    position: absolute;
+    width: 100%;
+    height: 215px;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+}
+.bk-img .bk-book > div,
+.bk-img .bk-front > div {
+    display: block;
+    position: absolute;
+}
+.bk-img .bk-front {
+    transform-style: preserve-3d;
+    transform-origin: 0% 50%;
+    transition: transform 0.5s;
+    transform: translate3d(0, 0, 20px);
+    z-index: 10;
+}
+.bk-img .bk-front > div {
+    z-index: 1;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    border-radius: 0 3px 3px 0;
+    box-shadow: inset 4px 0 10px rgba(0, 0, 0, 0.1);
+}
+.bk-img .bk-front:after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    bottom: 1px;
+    left: -1px;
+    width: 1px;
+}
+.bk-img .bk-front,
+.bk-img .bk-back,
+.bk-img .bk-front > div {
+    width: 150px;
+    height: 215px;
+}
+.bk-img .bk-left,
+.bk-img .bk-right {
+    width: 40px;
+    left: -20px;
+}
+.bk-img .bk-back {
+    transform: rotate3d(0, 1, 0, -180deg) translate3d(0, 0, 20px);
+    box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.3);
+    border-radius: 3px 0 0 3px;
+    opacity: 0;
+    transition: opacity 250ms ease-out;
+}
+.bk-img .bk-back:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 10px;
+    bottom: 0;
+    width: 3px;
+    background: rgba(0, 0, 0, 0.06);
+    box-shadow: 1px 0 3px rgba(255, 255, 255, 0.1);
+}
+.bk-img .bk-left {
+    height: 215px;
+    transform: rotate3d(0, 1, 0, -90deg);
+}
+.bk-img .bk-left h2 {
+    width: 215px;
+    height: 40px;
+    transform-origin: 0 0;
+    transform: rotate(90deg) translateY(-40px);
+}
+.bk-img .bk-cover {
+    /*background-image: url(../images/1.png);*/
+    background-repeat: no-repeat;
+    background-position: 10px 40px;
+}
+.bk-img .bk-cover:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 11px;
+    background: rgb(0 0 0 / 47%);
+    box-shadow: 1px 0 3px rgb(255 255 255 / 87%);
+}
+.bk-img .bk-cover {
+    background-repeat: no-repeat;
+    background-position: top left !important;
+}
+.bk-img .bk-front > div,
+.bk-img .bk-left {
+    background-color: #219e9a;
+    background-size: cover;
 }
