--- a/assets/css/magazine.css
+++ b/assets/css/magazine.css
@@ -56,6 +56,7 @@ span.new {
     margin: 0 auto;
     display: none;
     z-index: 100;
+    border-radius: 30px;
 }
 .html-book {
     background-size: cover;
@@ -106,10 +107,12 @@ span.new {
 .page.--left {
     border-right: 0;
     box-shadow: inset -7px 0 30px -7px rgba(0, 0, 0, 0.4);
+    border-radius: 30px 0 0 30px;
 }
 .page.--right {
     border-left: 0;
     box-shadow: inset 7px 0 30px -7px rgba(0, 0, 0, 0.4);
+    border-radius: 0 30px 30px 0;
 }
 .page.--right .page-footer {
     text-align: right;
