--- a/assets/css/magazine.css
+++ b/assets/css/magazine.css
@@ -103,17 +103,20 @@ span.new {
     border-top: solid 1px #f4e8d7;
     font-size: 80%;
     color: #998466;
+    text-align: right;
 }
 .page.--left {
     border-right: 0;
-    box-shadow: inset -7px 0 30px -7px rgba(0, 0, 0, 0.4);
-    border-radius: 30px 0 0 30px;
+    box-shadow: inset 7px 0 30px -10px rgba(0, 0, 0, 0.4);
+    border-radius: 0 30px 30px 0;
 }
 .page.--right {
     border-left: 0;
-    box-shadow: inset 7px 0 30px -7px rgba(0, 0, 0, 0.4);
-    border-radius: 0 30px 30px 0;
+    box-shadow: inset -7px 0 30px -10px rgba(0, 0, 0, 0.4);
+    border-radius: 30px 0 0 30px;
 }
+
+
 .page.--right .page-footer {
     text-align: right;
 }
