--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8242,6 +8242,9 @@ button.close-search i {
 }
 
 
+.related_magazine .section_title h1 {
+    font-size: 34px;
+}
 
 /***************** book List ******************/
 
